# fsc26-learning

./: README.md
notebooks/: Lab_0_python.ipynb  Lab_1_prompting.ipynb
projects/1_init_and_consume/: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_setup.py
projects/2_prompting/: EXERCISES.md  README.md  pyproject.toml
projects/2_prompting/exercises/: exercise_3.py
projects/2_prompting/solutions/: exercise_1.py  exercise_2.py  exercise_3.py
